--- a/package.json
+++ b/package.json
@@ -24,7 +24,11 @@
     "pwa"
   ],
   "engines": {
-    "node": "^12.13.0",
-    "vscode": "^1.22.0"
+    "node": ">=16.17.0"
+  },
+  "dependencies": {
+    "next": "^12.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
