--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "next": "^12.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "18.7.16",
+    "@types/react": "18.0.19",
+    "typescript": "4.8.3"
   }
 }
