--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
   "devDependencies": {
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
 }
