--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "18.0.19",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.3"
   }
