--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "telemetry": "next telemetry",
     "prettier-write": "prettier --write .",
-    "check-lint": "next lint",
+    "check-lint": "eslint .",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
     "test": "echo \"Write tests!\" && exit 0",
@@ -49,6 +49,7 @@
     "@babel/core": "^7.19.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@next/eslint-plugin-next": "^12.3.0",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
