--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "test": "echo \"Write tests!\" && exit 0",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "studio": "prisma studio",
+    "generate": "yarn generate:prisma && yarn generate:nexus && yarn generate:schema",
+    "generate:prisma": "prisma generate",
+    "generate:nexus": "ts-node --transpile-only -P tsconfig.nexus.json src/graphql/utilities/schema",
+    "generate:schema": "graphql-codegen"
   },
   "repository": {
     "type": "git",
@@ -41,7 +46,21 @@
     "node": ">=16.17.0"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.3.1",
+    "@tanstack/react-query": "^4.3.4",
+    "@tanstack/react-query-devtools": "^4.3.4",
+    "apollo-server-micro": "^3.10.2",
+    "graphql": "^16.6.0",
+    "graphql-middleware": "^6.1.32",
+    "graphql-request": "^5.0.0",
+    "graphql-scalars": "^1.18.0",
+    "graphql-shield": "^7.5.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "^12.3.0",
+    "next-auth": "^4.10.3",
+    "nexus": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -49,6 +68,11 @@
     "@babel/core": "^7.19.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@graphql-codegen/cli": "^2.12.0",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-react-query": "^4.0.1",
+    "@graphql-eslint/eslint-plugin": "^3.10.7",
     "@next/eslint-plugin-next": "^12.3.0",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
@@ -58,6 +82,8 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
+    "@types/micro": "^7.3.7",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.7.16",
     "@types/react": "18.0.19",
     "autoprefixer": "^10.4.8",
@@ -69,7 +95,10 @@
     "husky": "^8.0.1",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.3"
   }
 }
