--- a/tsconfig.nexus.json
+++ b/tsconfig.nexus.json
@@ -6,8 +6,10 @@
     "lib": ["esnext"],
     "esModuleInterop": true,
     "moduleResolution": "node",
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": "src"
   },
+  "include": ["**/*.d.ts"],
   "ts-node": {
     "transpileOnly": true,
     "require": ["tsconfig-paths/register"]
