--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "baseUrl": "src"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.d.ts"],
-  "exclude": ["node_modules", "src/generated"]
+  "exclude": ["node_modules", "src/generated/graphql.tsx"]
 }
