tsconfig: ⚙️ included schema.graphql
hope this will fix the vercel build issue

--- a/tsconfig.nexus.json
+++ b/tsconfig.nexus.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "src"
   },
-  "include": ["**/*.d.ts"],
+  "include": ["**/*.d.ts", "schema.graphql"],
   "ts-node": {
     "transpileOnly": true,
     "require": ["tsconfig-paths/register"]
