--- a/package.json
+++ b/package.json
@@ -69,9 +69,10 @@
     "@babel/core": "^7.19.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@graphql-codegen/cli": "^2.12.0",
-    "@graphql-codegen/typescript": "^2.7.3",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/cli": "2.12.1",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
     "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@graphql-eslint/eslint-plugin": "^3.10.7",
     "@next/eslint-plugin-next": "^12.3.0",
