--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,24 @@
       "version": "detect"
     }
   },
+  // NextJS
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@next/next/recommended",
+    "prettier"
+  ],
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "import/extensions": 0,
+    "import/no-unresolved": 0,
+    "no-console": 2,
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "react/jsx-filename-extension": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/react-in-jsx-scope": 0
+  },
   "overrides": [
     // Storybook
     {
@@ -23,27 +41,6 @@
         "storybook/hierarchy-separator": "error",
         // example of disabling a rule
         "storybook/default-exports": "off"
-      }
-    },
-    // TypeScript NextJS
-    {
-      "extends": [
-        "plugin:@next/next/recommended",
-        "next/core-web-vitals",
-        "prettier"
-      ],
-      "files": ["*.@(ts|tsx)"],
-      "parserOptions": {
-        "sourceType": "module"
-      },
-      "rules": {
-        "import/extensions": 0,
-        "import/no-unresolved": 0,
-        "no-console": 2,
-        "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
-        "react/jsx-filename-extension": 0,
-        "react/jsx-props-no-spreading": 0,
-        "react/react-in-jsx-scope": 0
       }
     },
     // Graphql
