--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check-lint": "eslint .",
     "check-types": "tsc --pretty --noEmit",
     "check-format": "prettier --check .",
-    "test": "echo \"Write tests!\" && exit 0",
+    "check-commit": "commitlint --edit",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
